src/objects/caesars_marketing_campaigns_lvm_temp__x.object
<CustomObject>
    <description>caesars$marketing_campaigns_lvm_temp</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>caesars$marketing_campaigns_lvm_temp</externalName>
    <fields>
        <fullName>c_acct_type_cd__c</fullName>
        <description>c_acct_type_cd</description>
        <externalDeveloperName>c_acct_type_cd</externalDeveloperName>
        <label>c_acct_type_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_acct_type_cd_fk__c</fullName>
        <description>c_acct_type_cd_fk</description>
        <externalDeveloperName>c_acct_type_cd_fk</externalDeveloperName>
        <label>c_acct_type_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_break_12__c</fullName>
        <description>c_adw_break_12</description>
        <externalDeveloperName>c_adw_break_12</externalDeveloperName>
        <label>c_adw_break_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_break_15__c</fullName>
        <description>c_adw_break_15</description>
        <externalDeveloperName>c_adw_break_15</externalDeveloperName>
        <label>c_adw_break_15</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_break_24__c</fullName>
        <description>c_adw_break_24</description>
        <externalDeveloperName>c_adw_break_24</externalDeveloperName>
        <label>c_adw_break_24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_trip_break_12__c</fullName>
        <description>c_adw_trip_break_12</description>
        <externalDeveloperName>c_adw_trip_break_12</externalDeveloperName>
        <label>c_adw_trip_break_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_trip_break_6__c</fullName>
        <description>c_adw_trip_break_6</description>
        <externalDeveloperName>c_adw_trip_break_6</externalDeveloperName>
        <label>c_adw_trip_break_6</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_avg_day_hotel_flag__c</fullName>
        <description>c_avg_day_hotel_flag</description>
        <externalDeveloperName>c_avg_day_hotel_flag</externalDeveloperName>
        <label>c_avg_day_hotel_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_channel_pref__c</fullName>
        <description>c_channel_pref</description>
        <externalDeveloperName>c_channel_pref</externalDeveloperName>
        <label>c_channel_pref</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_country_cd_ah__c</fullName>
        <description>c_country_cd_ah</description>
        <externalDeveloperName>c_country_cd_ah</externalDeveloperName>
        <label>c_country_cd_ah</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_credit_status_flag__c</fullName>
        <description>c_credit_status_flag</description>
        <externalDeveloperName>c_credit_status_flag</externalDeveloperName>
        <label>c_credit_status_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_distance_cluster__c</fullName>
        <description>c_distance_cluster</description>
        <externalDeveloperName>c_distance_cluster</externalDeveloperName>
        <label>c_distance_cluster</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_cd_prop__c</fullName>
        <description>c_dom_cd_prop</description>
        <externalDeveloperName>c_dom_cd_prop</externalDeveloperName>
        <label>c_dom_cd_prop</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_cd_prop_fk__c</fullName>
        <description>c_dom_cd_prop_fk</description>
        <externalDeveloperName>c_dom_cd_prop_fk</externalDeveloperName>
        <label>c_dom_cd_prop_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_pref_prop_cd__c</fullName>
        <description>c_dom_pref_prop_cd</description>
        <externalDeveloperName>c_dom_pref_prop_cd</externalDeveloperName>
        <label>c_dom_pref_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_pref_prop_cd_fk__c</fullName>
        <description>c_dom_pref_prop_cd_fk</description>
        <externalDeveloperName>c_dom_pref_prop_cd_fk</externalDeveloperName>
        <label>c_dom_pref_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_emailable__c</fullName>
        <description>c_emailable</description>
        <externalDeveloperName>c_emailable</externalDeveloperName>
        <label>c_emailable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ethnic_group1__c</fullName>
        <description>c_ethnic_group1</description>
        <externalDeveloperName>c_ethnic_group1</externalDeveloperName>
        <label>c_ethnic_group1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_tc_12__c</fullName>
        <description>c_frequency_tc_12</description>
        <externalDeveloperName>c_frequency_tc_12</externalDeveloperName>
        <label>c_frequency_tc_12</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_tc_48__c</fullName>
        <description>c_frequency_tc_48</description>
        <externalDeveloperName>c_frequency_tc_48</externalDeveloperName>
        <label>c_frequency_tc_48</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_ttm_24__c</fullName>
        <description>c_frequency_ttm_24</description>
        <externalDeveloperName>c_frequency_ttm_24</externalDeveloperName>
        <label>c_frequency_ttm_24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_ttm__c</fullName>
        <description>c_frequency_ttm</description>
        <externalDeveloperName>c_frequency_ttm</externalDeveloperName>
        <label>c_frequency_ttm</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_pref__c</fullName>
        <description>c_game_pref</description>
        <externalDeveloperName>c_game_pref</externalDeveloperName>
        <label>c_game_pref</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break_12__c</fullName>
        <description>c_hotel_adw_break_12</description>
        <externalDeveloperName>c_hotel_adw_break_12</externalDeveloperName>
        <label>c_hotel_adw_break_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break_15__c</fullName>
        <description>c_hotel_adw_break_15</description>
        <externalDeveloperName>c_hotel_adw_break_15</externalDeveloperName>
        <label>c_hotel_adw_break_15</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break_24__c</fullName>
        <description>c_hotel_adw_break_24</description>
        <externalDeveloperName>c_hotel_adw_break_24</externalDeveloperName>
        <label>c_hotel_adw_break_24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break__c</fullName>
        <description>c_hotel_adw_break</description>
        <externalDeveloperName>c_hotel_adw_break</externalDeveloperName>
        <label>c_hotel_adw_break</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_last_gaming_trip__c</fullName>
        <description>c_last_gaming_trip</description>
        <externalDeveloperName>c_last_gaming_trip</externalDeveloperName>
        <label>c_last_gaming_trip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_mailable__c</fullName>
        <description>c_mailable</description>
        <externalDeveloperName>c_mailable</externalDeveloperName>
        <label>c_mailable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_main_ethnic_type__c</fullName>
        <description>c_main_ethnic_type</description>
        <externalDeveloperName>c_main_ethnic_type</externalDeveloperName>
        <label>c_main_ethnic_type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_mail_cd__c</fullName>
        <description>c_prop_mail_cd</description>
        <externalDeveloperName>c_prop_mail_cd</externalDeveloperName>
        <label>c_prop_mail_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd_fk__c</fullName>
        <description>c_prop_market_cd_fk</description>
        <externalDeveloperName>c_prop_market_cd_fk</externalDeveloperName>
        <label>c_prop_market_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_recency__c</fullName>
        <description>c_recency</description>
        <externalDeveloperName>c_recency</externalDeveloperName>
        <label>c_recency</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_blv__c</fullName>
        <description>c_rep_id_blv</description>
        <externalDeveloperName>c_rep_id_blv</externalDeveloperName>
        <label>c_rep_id_blv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_clv__c</fullName>
        <description>c_rep_id_clv</description>
        <externalDeveloperName>c_rep_id_clv</externalDeveloperName>
        <label>c_rep_id_clv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_flv__c</fullName>
        <description>c_rep_id_flv</description>
        <externalDeveloperName>c_rep_id_flv</externalDeveloperName>
        <label>c_rep_id_flv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_ilv__c</fullName>
        <description>c_rep_id_ilv</description>
        <externalDeveloperName>c_rep_id_ilv</externalDeveloperName>
        <label>c_rep_id_ilv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_las__c</fullName>
        <description>c_rep_id_las</description>
        <externalDeveloperName>c_rep_id_las</externalDeveloperName>
        <label>c_rep_id_las</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_phv__c</fullName>
        <description>c_rep_id_phv</description>
        <externalDeveloperName>c_rep_id_phv</externalDeveloperName>
        <label>c_rep_id_phv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_plv__c</fullName>
        <description>c_rep_id_plv</description>
        <externalDeveloperName>c_rep_id_plv</externalDeveloperName>
        <label>c_rep_id_plv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rep_id_rlv__c</fullName>
        <description>c_rep_id_rlv</description>
        <externalDeveloperName>c_rep_id_rlv</externalDeveloperName>
        <label>c_rep_id_rlv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tier_cd__c</fullName>
        <description>c_tier_cd</description>
        <externalDeveloperName>c_tier_cd</externalDeveloperName>
        <label>c_tier_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tier_cd_fk__c</fullName>
        <description>c_tier_cd_fk</description>
        <externalDeveloperName>c_tier_cd_fk</externalDeveloperName>
        <label>c_tier_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tierscore_desc__c</fullName>
        <description>c_tierscore_desc</description>
        <externalDeveloperName>c_tierscore_desc</externalDeveloperName>
        <label>c_tierscore_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_zip_7_pdb__c</fullName>
        <description>c_zip_7_pdb</description>
        <externalDeveloperName>c_zip_7_pdb</externalDeveloperName>
        <label>c_zip_7_pdb</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_campaign_score_dt__c</fullName>
        <description>d_campaign_score_dt</description>
        <externalDeveloperName>d_campaign_score_dt</externalDeveloperName>
        <label>d_campaign_score_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_min_est_dt__c</fullName>
        <description>d_min_est_dt</description>
        <externalDeveloperName>d_min_est_dt</externalDeveloperName>
        <label>d_min_est_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_act_all_ap_pdb_12mn_plus__c</fullName>
        <description>f_act_all_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_act_all_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_act_all_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_all_p_pm15__c</fullName>
        <description>f_actual_all_p_pm15</description>
        <externalDeveloperName>f_actual_all_p_pm15</externalDeveloperName>
        <label>f_actual_all_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ada_p_pm15__c</fullName>
        <description>f_ada_p_pm15</description>
        <externalDeveloperName>f_ada_p_pm15</externalDeveloperName>
        <label>f_ada_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adt_p_pm15__c</fullName>
        <description>f_adt_p_pm15</description>
        <externalDeveloperName>f_adt_p_pm15</externalDeveloperName>
        <label>f_adt_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_12__c</fullName>
        <description>f_adw_12</description>
        <externalDeveloperName>f_adw_12</externalDeveloperName>
        <label>f_adw_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_15__c</fullName>
        <description>f_adw_15</description>
        <externalDeveloperName>f_adw_15</externalDeveloperName>
        <label>f_adw_15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_24__c</fullName>
        <description>f_adw_24</description>
        <externalDeveloperName>f_adw_24</externalDeveloperName>
        <label>f_adw_24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_trip_12__c</fullName>
        <description>f_adw_trip_12</description>
        <externalDeveloperName>f_adw_trip_12</externalDeveloperName>
        <label>f_adw_trip_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_trip_6__c</fullName>
        <description>f_adw_trip_6</description>
        <externalDeveloperName>f_adw_trip_6</externalDeveloperName>
        <label>f_adw_trip_6</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_act_ap_pdb_12mn_plus__c</fullName>
        <description>f_daily_act_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_daily_act_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_daily_act_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_theo_ap_pdb_12mnplus__c</fullName>
        <description>f_daily_theo_ap_pdb_12mnplus</description>
        <externalDeveloperName>f_daily_theo_ap_pdb_12mnplus</externalDeveloperName>
        <label>f_daily_theo_ap_pdb_12mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw_12__c</fullName>
        <description>f_hotel_adw_12</description>
        <externalDeveloperName>f_hotel_adw_12</externalDeveloperName>
        <label>f_hotel_adw_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw_15__c</fullName>
        <description>f_hotel_adw_15</description>
        <externalDeveloperName>f_hotel_adw_15</externalDeveloperName>
        <label>f_hotel_adw_15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw_24__c</fullName>
        <description>f_hotel_adw_24</description>
        <externalDeveloperName>f_hotel_adw_24</externalDeveloperName>
        <label>f_hotel_adw_24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw__c</fullName>
        <description>f_hotel_adw</description>
        <externalDeveloperName>f_hotel_adw</externalDeveloperName>
        <label>f_hotel_adw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_slot_pct_ap_pdb_12mn_plus__c</fullName>
        <description>f_slot_pct_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_slot_pct_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_slot_pct_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_slot_pct_pm15__c</fullName>
        <description>f_slot_pct_pm15</description>
        <externalDeveloperName>f_slot_pct_pm15</externalDeveloperName>
        <label>f_slot_pct_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ap_pdb_12mn_plus__c</fullName>
        <description>f_theo_all_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_theo_all_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_theo_all_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_p_pm15__c</fullName>
        <description>f_theo_all_p_pm15</description>
        <externalDeveloperName>f_theo_all_p_pm15</externalDeveloperName>
        <label>f_theo_all_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_pm12__c</fullName>
        <description>f_theo_slot_pm12</description>
        <externalDeveloperName>f_theo_slot_pm12</externalDeveloperName>
        <label>f_theo_slot_pm12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_pm15__c</fullName>
        <description>f_theo_slot_pm15</description>
        <externalDeveloperName>f_theo_slot_pm15</externalDeveloperName>
        <label>f_theo_slot_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tier_score__c</fullName>
        <description>f_tier_score</description>
        <externalDeveloperName>f_tier_score</externalDeveloperName>
        <label>f_tier_score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_cycle_12__c</fullName>
        <description>f_trip_cycle_12</description>
        <externalDeveloperName>f_trip_cycle_12</externalDeveloperName>
        <label>f_trip_cycle_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_cycle_48__c</fullName>
        <description>f_trip_cycle_48</description>
        <externalDeveloperName>f_trip_cycle_48</externalDeveloperName>
        <label>f_trip_cycle_48</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_12mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_12mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_12mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_12mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_age_adj_ah__c</fullName>
        <description>i_age_adj_ah</description>
        <externalDeveloperName>i_age_adj_ah</externalDeveloperName>
        <label>i_age_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_blv__c</fullName>
        <description>i_cas_acct_blv</description>
        <externalDeveloperName>i_cas_acct_blv</externalDeveloperName>
        <label>i_cas_acct_blv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_clv__c</fullName>
        <description>i_cas_acct_clv</description>
        <externalDeveloperName>i_cas_acct_clv</externalDeveloperName>
        <label>i_cas_acct_clv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_flv__c</fullName>
        <description>i_cas_acct_flv</description>
        <externalDeveloperName>i_cas_acct_flv</externalDeveloperName>
        <label>i_cas_acct_flv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_ilv__c</fullName>
        <description>i_cas_acct_ilv</description>
        <externalDeveloperName>i_cas_acct_ilv</externalDeveloperName>
        <label>i_cas_acct_ilv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_las__c</fullName>
        <description>i_cas_acct_las</description>
        <externalDeveloperName>i_cas_acct_las</externalDeveloperName>
        <label>i_cas_acct_las</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_phv__c</fullName>
        <description>i_cas_acct_phv</description>
        <externalDeveloperName>i_cas_acct_phv</externalDeveloperName>
        <label>i_cas_acct_phv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_plv__c</fullName>
        <description>i_cas_acct_plv</description>
        <externalDeveloperName>i_cas_acct_plv</externalDeveloperName>
        <label>i_cas_acct_plv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cas_acct_rlv__c</fullName>
        <description>i_cas_acct_rlv</description>
        <externalDeveloperName>i_cas_acct_rlv</externalDeveloperName>
        <label>i_cas_acct_rlv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_ap_pdb_12mn_plus__c</fullName>
        <description>i_days_rtd_ap_pdb_12mn_plus</description>
        <externalDeveloperName>i_days_rtd_ap_pdb_12mn_plus</externalDeveloperName>
        <label>i_days_rtd_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_since_gaming__c</fullName>
        <description>i_days_since_gaming</description>
        <externalDeveloperName>i_days_since_gaming</externalDeveloperName>
        <label>i_days_since_gaming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_since_last__c</fullName>
        <description>i_days_since_last</description>
        <externalDeveloperName>i_days_since_last</externalDeveloperName>
        <label>i_days_since_last</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_dob_mn_adj_ah__c</fullName>
        <description>i_dob_mn_adj_ah</description>
        <externalDeveloperName>i_dob_mn_adj_ah</externalDeveloperName>
        <label>i_dob_mn_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_email_decile__c</fullName>
        <description>i_email_decile</description>
        <externalDeveloperName>i_email_decile</externalDeveloperName>
        <label>i_email_decile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_rtd_trips_p_pm15__c</fullName>
        <description>i_nbr_rtd_trips_p_pm15</description>
        <externalDeveloperName>i_nbr_rtd_trips_p_pm15</externalDeveloperName>
        <label>i_nbr_rtd_trips_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trips_p_pm15__c</fullName>
        <description>i_nbr_trips_p_pm15</description>
        <externalDeveloperName>i_nbr_trips_p_pm15</externalDeveloperName>
        <label>i_nbr_trips_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trips_p_pm24__c</fullName>
        <description>i_nbr_trips_p_pm24</description>
        <externalDeveloperName>i_nbr_trips_p_pm24</externalDeveloperName>
        <label>i_nbr_trips_p_pm24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_1__c</fullName>
        <description>i_random_1</description>
        <externalDeveloperName>i_random_1</externalDeveloperName>
        <label>i_random_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_2__c</fullName>
        <description>i_random_2</description>
        <externalDeveloperName>i_random_2</externalDeveloperName>
        <label>i_random_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_static_yr__c</fullName>
        <description>i_random_static_yr</description>
        <externalDeveloperName>i_random_static_yr</externalDeveloperName>
        <label>i_random_static_yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rated_days_p_pm15__c</fullName>
        <description>i_rated_days_p_pm15</description>
        <externalDeveloperName>i_rated_days_p_pm15</externalDeveloperName>
        <label>i_rated_days_p_pm15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_ap_pdb_12mn_plus__c</fullName>
        <description>i_trp_rtd_ap_pdb_12mn_plus</description>
        <externalDeveloperName>i_trp_rtd_ap_pdb_12mn_plus</externalDeveloperName>
        <label>i_trp_rtd_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ttm_trip_cnt_12__c</fullName>
        <description>i_ttm_trip_cnt_12</description>
        <externalDeveloperName>i_ttm_trip_cnt_12</externalDeveloperName>
        <label>i_ttm_trip_cnt_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ttm_trip_cnt_24__c</fullName>
        <description>i_ttm_trip_cnt_24</description>
        <externalDeveloperName>i_ttm_trip_cnt_24</externalDeveloperName>
        <label>i_ttm_trip_cnt_24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lvm12mohv__c</fullName>
        <description>lvm12mohv</description>
        <externalDeveloperName>lvm12mohv</externalDeveloperName>
        <label>lvm12mohv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lvm15mohv__c</fullName>
        <description>lvm15mohv</description>
        <externalDeveloperName>lvm15mohv</externalDeveloperName>
        <label>lvm15mohv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lvm24mohv__c</fullName>
        <description>lvm24mohv</description>
        <externalDeveloperName>lvm24mohv</externalDeveloperName>
        <label>lvm24mohv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_exp_date_exh_12mo__c</fullName>
        <description>max_exp_date_exh_12mo</description>
        <externalDeveloperName>max_exp_date_exh_12mo</externalDeveloperName>
        <label>max_exp_date_exh_12mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_exp_date_exh_24mo__c</fullName>
        <description>max_exp_date_exh_24mo</description>
        <externalDeveloperName>max_exp_date_exh_24mo</externalDeveloperName>
        <label>max_exp_date_exh_24mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_exp_date_ina_12mo__c</fullName>
        <description>max_exp_date_ina_12mo</description>
        <externalDeveloperName>max_exp_date_ina_12mo</externalDeveloperName>
        <label>max_exp_date_ina_12mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_exp_date_ina_24mo__c</fullName>
        <description>max_exp_date_ina_24mo</description>
        <externalDeveloperName>max_exp_date_ina_24mo</externalDeveloperName>
        <label>max_exp_date_ina_24mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_exp_date_sin_12mo__c</fullName>
        <description>max_exp_date_sin_12mo</description>
        <externalDeveloperName>max_exp_date_sin_12mo</externalDeveloperName>
        <label>max_exp_date_sin_12mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_exp_date_sin_24mo__c</fullName>
        <description>max_exp_date_sin_24mo</description>
        <externalDeveloperName>max_exp_date_sin_24mo</externalDeveloperName>
        <label>max_exp_date_sin_24mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>predicted_bucket_12mo__c</fullName>
        <description>predicted_bucket_12mo</description>
        <externalDeveloperName>predicted_bucket_12mo</externalDeveloperName>
        <label>predicted_bucket_12mo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>predicted_bucket_24mo__c</fullName>
        <description>predicted_bucket_24mo</description>
        <externalDeveloperName>predicted_bucket_24mo</externalDeveloperName>
        <label>predicted_bucket_24mo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>probability_12mo__c</fullName>
        <description>probability_12mo</description>
        <externalDeveloperName>probability_12mo</externalDeveloperName>
        <label>probability_12mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>probability_24mo__c</fullName>
        <description>probability_24mo</description>
        <externalDeveloperName>probability_24mo</externalDeveloperName>
        <label>probability_24mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$marketing_campaigns_lvm_temp</label>
    <pluralLabel>caesars$marketing_campaigns_lvm_temp</pluralLabel>
</CustomObject>